--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         }
     ],
     "require": {
-        "illuminate/support": "5.*",
+        "laravel/laravel": "5.*",
         "php" : "~5.5|~7.0"
     },
     "require-dev": {
