--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,11 @@
         }
     ],
     "require": {
-        "laravel/laravel": "5.*",
+        "laravel/laravel": "5.0.*|5.1.*|5.2.*",
         "php" : "~5.5|~7.0"
     },
     "require-dev": {
-        "phpunit/phpunit" : "4.*",
-        "scrutinizer/ocular": "~1.1",
-        "squizlabs/php_codesniffer": "~2.3"
+        "phpunit/phpunit" : "4.*"
     },
     "autoload": {
         "psr-4": {
