--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         }
     ],
     "require": {
-        "laravel/laravel": "5.0.*|5.1.*|5.2.*",
+        "laravel/framework": "5.0.*|5.1.*|5.2.*",
         "predis/predis": "^1.1",
         "php" : "~5.5|~7.0"
     },
