--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,10 @@
         }
     ],
     "require": {
-        "laravel/framework": "5.0.*|5.1.*|5.2.*",
-        "predis/predis": "^1.1",
-        "php" : "~5.5|~7.0"
+        "php" : "~5.5|~7.0",
+        "laravel/framework": ">=5.0"
     },
     "require-dev": {
-        "phpunit/phpunit" : "4.*"
     },
     "autoload": {
         "psr-4": {
